<?xml version="1.0"?>
<package format="2">
  <name>pandar_driver</name>
  <version>0.0.0</version>
  <description>
    ROS2 driver for Hesai LiDARSs.
  </description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>libboost-dev</build_depend>
  <build_export_depend>libboost-dev</build_export_depend>

  <depend>builtin_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <depend>laser_proc</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_srvs</depend>
  <build_depend>std_msgs</build_depend>
  <depend>pluginlib</depend>
  <depend>pandar_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
