<?xml version="1.0"?>
<package format="2">
  <name>pandar_pointcloud</name>
  <version>0.0.0</version>
  <description>
    Point cloud converter for Hesai LiDARSs.
  </description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libboost-dev</build_depend>
  <build_export_depend>libboost-dev</build_export_depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <depend>laser_proc</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_srvs</depend>

  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>pandar_msgs</depend>
  <depend>pandar_driver</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
